# DeepFin

./: .gitignore  .inferconfig  AGENTS.md  CLAUDE.md  README.md  TRAINING_LOG.md  bench_results.md  future_ideas.md  prompt.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  spec.md  tcec.md
.basedpyright/: baseline.json
chess_anti_engine/: __init__.py  arena.py  config.py  config_keys.py  inference.py  inference_dispatcher.py  inference_threaded.py  learner.py  run.py  tablebase.py  version.py  worker.py  worker_assets.py  worker_buffer.py  worker_config.py  worker_inference.py  worker_pool.py
chess_anti_engine/bench/: __init__.py  play_batch_timing.py
chess_anti_engine/encoding/: __init__.py  _cboard_impl.h  _features_ext.c  _features_ext.pyi  _features_impl.h  _lc0_ext.c  _lc0_ext.pyi  cboard_encode.py  encode.py  features.py  lc0.py
chess_anti_engine/eval/: __init__.py  puzzles.py
chess_anti_engine/mcts/: __init__.py  _mcts_tree.c  _mcts_tree.pyi  gumbel.py  gumbel_c.py  puct.py  puct_c.py  puct_vl.py  sampling.py
chess_anti_engine/model/: __init__.py  tiny.py  transformer.py
chess_anti_engine/moves/: __init__.py  encode.py
chess_anti_engine/onnx/: __init__.py  export.py  load.py
chess_anti_engine/replay/: __init__.py  augment.py  buffer.py  dataset.py  disk_buffer.py  shard.py
chess_anti_engine/selfplay/: __init__.py  budget.py  config.py  finalize.py  game.py  manager.py  match.py  network_turn.py  opening.py  state.py  stockfish_turn.py  tablebase.py  temperature.py
chess_anti_engine/server/: __init__.py  app.py  auth.py  lease.py  manage_users.py  run_server.py
chess_anti_engine/stockfish/: __init__.py  pid.py  pool.py  uci.py  wdl.py
chess_anti_engine/train/: __init__.py  async_eval.py  compile_probe.py  cosmos.py  cosmos_fast.py  losses.py  muon.py  targets.py  trainer.py
chess_anti_engine/tune/: __init__.py  _utils.py  distributed_runtime.py  gpbt.py  harness.py  prefetch.py  process_cleanup.py  recovery.py  replay_exchange.py  salvage.py  trainable.py  trainable_config_ops.py  trainable_init.py  trainable_metrics.py  trainable_phases.py  trainable_report.py  trial_config.py
chess_anti_engine/uci/: __init__.py  __main__.py  engine.py  model_loader.py  multi_gpu_pucv_pool.py  protocol.py  score.py  search.py  subprocess_client.py  tablebase.py  time_manager.py  walker_pool.py
chess_anti_engine/utils/: __init__.py  amp.py  atomic.py  bitboards.py  config_yaml.py  numpy_helpers.py  versioning.py
configs/: default.yaml  optimizer_compare_asha.yaml  pbt2_fresh_run10.yaml  pbt2_fresh_run11.yaml  pbt2_fresh_run12.yaml  pbt2_fresh_run13.yaml  pbt2_fresh_run13_salvage.yaml  pbt2_fresh_run14_salvage.yaml  pbt2_fresh_run15_salvage.yaml  pbt2_fresh_run16.yaml  pbt2_fresh_run17.yaml  pbt2_fresh_run18.yaml  pbt2_fresh_run19.yaml  pbt2_fresh_run21.yaml  pbt2_fresh_run22.yaml  pbt2_fresh_run23.yaml  pbt2_fresh_run24.yaml  pbt2_fresh_run25.yaml  pbt2_fresh_run26.yaml  pbt2_fresh_run27.yaml  pbt2_fresh_run28.yaml  pbt2_fresh_run29.yaml  pbt2_fresh_run9.yaml  pbt2_small.yaml  pbt2_small_128d_pid_test.yaml
docs/: REVIEW_BUG_HUNT.md  SIMPLIFY_PLAN.md  threaded_dispatcher_gumbel_eager.json  threaded_dispatcher_gumbel_results.json  threaded_dispatcher_results.json  threaded_dispatcher_results.md  threaded_dispatcher_results_eager.json
docs/experiments/: value_head_arch.md
scripts/: analyze_sf_wdl_calibration.py  analyze_winrate_calibration.py  backtest_pid_half_life.py  bench_aot_multi.py  bench_aot_threaded.py  bench_batch_wait.sh  bench_compile_modes.py  bench_dispatcher_ab.py  bench_dispatcher_gumbel.py  bench_maxautotune.py  bench_multi_eager.py  bench_multi_threaded.py  bench_multi_worker.py  bench_pipeline.py  bench_threaded_selfplay.py  bench_threading_cpu.py  bench_uci_engine.py  bench_vs_sf.py  blunder_check.py  blunder_check_cp.py  calibrate_difficulty.py  cuda_sanity_check.py  deepfin  deepfin.bat  diagnose.py  diagnose_arch.py  e2e_distributed_smoke_gumbel.sh  e2e_strength_test.py  eval_puzzles.py  generate_bootstrap.py  generate_iter0.py  graceful_restart.py  hourly_pbt_audit.sh  inspect_onnx.py  lint.sh  match_checkpoints.py  match_vs_uci.py  monitor_pbt.sh  pbt_30m_poll.py  pbt_hourly_audit.py  (+18 more)
tests/: selfplay_helpers.py  test_arena_match_smoke.py  test_async_test_eval.py  test_atomic_io.py  test_batch_coalescing.py  test_batch_descend_puct.py  test_batch_process_ply.py  test_bench_result_labeling.py  test_cboard_move_parity.py  test_cboard_terminal.py  test_collation.py  test_compute_loss.py  test_cosmos_fast_optimizer.py  test_cosmos_optimizer.py  test_cp_to_wdl.py  test_diagnose_scripts.py  test_difficulty_state.py  test_distributed_selfplay_backpressure.py  test_e2e_smoke.py  test_encode_optimization.py  test_encoding_basic.py  test_feature_dropout.py  test_finalize_helpers.py  test_gpu_dispatcher.py  test_gumbel_budget_usage.py  test_gumbel_mcts_smoke.py  test_gumbel_root_many_edge_cases.py  test_harness_sync_exclude.py  test_hlgauss_target.py  test_inference_broker.py  test_inplace_async.py  test_is_selfplay_tagging.py  test_learner_helpers.py  test_losses.py  test_match_checkpoints_script.py  test_match_result_labeling.py  test_mcts_c_tree.py  test_mcts_forced_collapse.py  test_mcts_solved_propagation.py  test_mcts_thread_safety.py  (+73 more)
