[project]
name = "chess-anti-engine"
version = "0.0.1"
description = "Chess anti-engine training framework (Phase 1: Python pipeline)"
requires-python = ">=3.10"
dependencies = [
  "python-chess>=1.10",
  "numpy>=1.24",
  "torch>=2.0",
  "pyyaml>=6.0",
  "zarr>=2.18",
]

[project.scripts]
deepfin = "chess_anti_engine.uci.__main__:main"

[build-system]
requires = ["setuptools>=70", "wheel", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chess_anti_engine*"]
exclude = ["runs*", "tests*"]

[project.optional-dependencies]
train = [
  "tensorboard>=2.0",
]

dev = [
  "pytest>=7.0",
  "pytest-cov>=5.0",
  "diff-cover>=8.0",
  # Static analysis — must match the tools scripts/lint.sh invokes so that a
  # clean `pip install -e ".[dev]"` can reproduce the documented gate.
  "ruff>=0.5",
  "basedpyright>=1.39",
  "skylos>=4.0",
  "vulture>=2.0",
  "pylint>=3.0",
  # C extension static analysis (pip-installable, no sudo required)
  "cppcheck>=1.5",     # general C static analyzer (bundles cppcheck binary)
  # For deeper interprocedural analysis, install Facebook infer separately:
  #   curl -L https://github.com/facebook/infer/releases/download/v1.2.0/infer-linux-x86_64-v1.2.0.tar.xz | tar -C ~/.local -xJ
  #   ~/.local/infer-linux-x86_64-v1.2.0/bin/infer run -- python3 setup.py build_ext --inplace
]

tune = [
  "ray[tune]>=2.9",
  "optuna>=3.0",
]

onnx = [
  "onnx>=1.15",
  "onnxruntime>=1.17",
  "onnxscript>=0.1.0",
]

server = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
  "httpx>=0.26",
]

worker = [
  "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:torch.jit",
    "ignore::FutureWarning:copyreg",
]
markers = [
    "slow: stress / long-running tests (e.g. mcts thread-safety hammer); not in the default run",
]

[tool.coverage.run]
source = ["chess_anti_engine"]
branch = true
omit = [
    "chess_anti_engine/uci/__main__.py",
    "chess_anti_engine/server/run_server.py",
    "chess_anti_engine/version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
]
show_missing = true
skip_covered = false

[tool.ruff.lint]
# E741: allow single-letter `l` — we use `w/d/l` for win/draw/loss counters
#       throughout the stats code, and renaming to `losses` would collide with
#       loss-function variables.
ignore = ["E741"]

[tool.vulture]
# Names that vulture can't see being used. Keep this list small and
# annotated — the goal is that every entry is a FP we've verified, not
# a convenience suppression.
#   AsyncBatchEvaluator     — used via stringified cast in gumbel_c.py
#   pairwise_lr/_momentum   — accepted as legacy kwargs in gpbt.py
ignore_names = [
  "AsyncBatchEvaluator",
  "pairwise_lr",
  "pairwise_momentum",
]

[tool.pylint.main]
# Narrow pylint scope: disable everything, enable only the semantic checks
# that ruff and skylos don't cover well. Style/convention noise is left to
# ruff. Stub files (.pyi) are signatures-only — args are always "unused".
ignore-patterns = ["^.*\\.pyi$"]
disable = ["all"]
enable = [
  "unused-argument",
  "possibly-used-before-assignment",
  "consider-using-with",
  "logging-fstring-interpolation",
  "dangerous-default-value",
  "unreachable",
  "f-string-without-interpolation",
]
